package dvonn

type ChipColor string

// can be used to set the chip color as well as the player selected color
const (
	RED   ChipColor = "RED"
	WHITE ChipColor = "WHITE"
	BLACK ChipColor = "BLACK"
)
